--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,23 +1,14 @@
 [phases.setup]
-nixPkgs = [
-  "php", 
-  "php.extensions.gd",
-  "php.extensions.mbstring",
-  "php.extensions.pdo",
-  "php.extensions.pdo_mysql",
-  "php.extensions.zip",
-  "php.extensions.bcmath",
-  "phpPackages.composer", 
-  "nodejs_18", 
-  "yarn"
-]
+nixPkgs = ["php82", "php82Extensions.gd", "php82Extensions.mbstring", "php82Extensions.pdo", "php82Extensions.pdo_mysql", "nodejs_18"]
+
+[phases.install]
+cmds = ["composer install --no-dev --optimize-autoloader --no-interaction"]
 
 [phases.build]
 cmds = [
-  "composer install --no-dev --optimize-autoloader",
-  "yarn install",
-  "yarn prod",
-  "php artisan optimize",
+  "npm install",
+  "npm run build",
+  "php artisan config:cache",
   "php artisan route:cache",
   "php artisan view:cache"
 ]
