--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,13 @@
 [phases.setup]
-nixPkgs = ["php82", "php82Extensions.gd", "php82Extensions.mbstring", "php82Extensions.pdo", "php82Extensions.pdo_mysql", "nodejs_18"]
+nixPkgs = ["php", "phpPackages.composer", "nodejs_18", "yarn"]
 
-[phases.install]
-cmds = ["composer install --no-dev --optimize-autoloader --no-interaction"]
 
 [phases.build]
 cmds = [
-  "npm install",
-  "npm run build",
-  "php artisan config:cache",
+  "composer install --no-dev --optimize-autoloader",
+  "yarn install",
+  "yarn prod",
+  "php artisan optimize",
   "php artisan route:cache",
   "php artisan view:cache"
 ]
